--- a/article.html
+++ b/article.html
@@ -164,9 +164,8 @@
                     </a>
                 </div>
             </div>
-            <p class="text__paragraph">
-                <img src="img/m.svg" alt="Icon: letter" class="text__letter">
-                Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших направлений развития. <br>
+            <p class="text__paragraph text__paragraph-first">
+                МИдейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших направлений развития. <br>
                 Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших направлений развития. Значимость этих проблем настолько очевидна, что постоянное информационно-пропагандистское обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации дальнейших направлений развития.
             </p>
             <h2 class="text__title">Введение НПД в РФ</h2>
@@ -237,7 +236,7 @@
                     </div>
                     <img src="img/article-material.png" alt="Icon: material" class="text__paragraph-material">
                     <div class="text__paragraph-name">
-                        20+ инструментов для <nobr>js-разработчика</nobr>
+                        20+ инструментов <nobr>для js-разработчика</nobr>
                     </div>
                     <div class="text__paragraph-descr">
                         Узнайте, какими инструментами вы еще не пользовались, а могли бы. Эти инструменты помогут вам ускорить свою работу или повысить ее качество. Все инструменты собраны в виде...
@@ -248,7 +247,7 @@
                             1,623
                         </div>
                         <div class="text__paragraph-likes">
-                            <img src="img/like.svg" alt="Icon: like" class="text__paragraph-icon">
+                            <img src="img/article-comment.svg" alt="Icon: comment" class="text__paragraph-icon">
                             102
                         </div>
                     </div>
@@ -267,21 +266,21 @@
                 Задача организации, в особенности же консультация с широким активом требуют от нас анализа новых предложений. Повседневная практика показывает, что постоянный количественный рост и сфера нашей  
             </p>
             <div class="text__tags">
-                <span class="text__tags-tag">
+                <div class="text__tags-tag">
                     Travel
-                </span>
-                <span class="text__tags-tag">
+                </div>
+                <div class="text__tags-tag">
                     Destinations
-                </span>
-                <span class="text__tags-tag">
+                </div>
+                <div class="text__tags-tag">
                     Nature
-                </span>
-                <span class="text__tags-tag">
+                </div>
+                <div class="text__tags-tag">
                     World
-                </span>
-                <span class="text__tags-tag">
+                </div>
+                <div class="text__tags-tag">
                     Alaska
-                </span>
+                </div>
             </div>
             <div class="text__devider">
 
@@ -381,7 +380,7 @@
             </a>
             <a href="#" class="articles__link">
                 <div class="articles__block">
-                    <img src="img/article-article-one.png" alt="Image: article" class="articles__img">
+                    <img src="img/article-article-four.png" alt="Image: article" class="articles__img">
                     <div class="articles__title">
                         В вашем портфолио могут быть фейковые работы 
                     </div>
@@ -431,7 +430,7 @@
                     </div>
                     <div class="comments__descr-m">
                         <a href="#" class="comments__descr-m-comments">
-                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon">
+                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon-another">
                             Ответить
                         </a>
                         <a href="#" class="comments__descr-m-likes">
@@ -442,7 +441,7 @@
                     </div>
                 </div>
             </div>
-            <div class="comments__comment">
+            <div class="comments__comment comments__comment-two">
                 <img src="img/article-comment-avatar-two.svg" alt="Icon: avatar" class="comments__avatar">
                 <div class="comments__descr">
                     <div class="comments__descr-meta">
@@ -458,7 +457,7 @@
                     </div>
                     <div class="comments__descr-m">
                         <a href="#" class="comments__descr-m-comments">
-                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon">
+                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon-another">
                             Ответить
                         </a>
                         <a href="#" class="comments__descr-m-likes" style="color: #939699">
@@ -469,7 +468,7 @@
                     </div>
                 </div>
             </div>
-            <div class="comments__comment">
+            <div class="comments__comment comments__comment-three">
                 <img src="img/article-comment-avatar-three.svg" alt="Icon: avatar" class="comments__avatar">
                 <div class="comments__descr">
                     <div class="comments__descr-meta">
@@ -485,7 +484,7 @@
                     </div>
                     <div class="comments__descr-m">
                         <a href="#" class="comments__descr-m-comments">
-                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon">
+                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon-another">
                             Ответить
                         </a>
                         <a href="#" class="comments__descr-m-likes" style="color: #FF4F52;">
@@ -512,7 +511,7 @@
                     </div>
                     <div class="comments__descr-m">
                         <a href="#" class="comments__descr-m-comments">
-                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon">
+                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon-another">
                             Ответить
                         </a>
                         <a href="#" class="comments__descr-m-likes" style="color: #939699">
@@ -541,7 +540,7 @@
                     </div>
                     <div class="comments__descr-m">
                         <a href="#" class="comments__descr-m-comments">
-                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon">
+                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon-another">
                             Ответить
                         </a>
                         <a href="#" class="comments__descr-m-likes" style="color: #939699">
@@ -568,7 +567,7 @@
                     </div>
                     <div class="comments__descr-m">
                         <a href="#" class="comments__descr-m-comments">
-                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon">
+                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon-another">
                             Ответить
                         </a>
                         <a href="#" class="comments__descr-m-likes" style="color: #FF4F52;">
@@ -595,7 +594,7 @@
                     </div>
                     <div class="comments__descr-m">
                         <a href="#" class="comments__descr-m-comments">
-                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon">
+                            <img src="img/article-comment.svg" alt="Icon: comment" class="comments__descr-m-icon-another">
                             Ответить
                         </a>
                         <a href="#" class="comments__descr-m-likes" style="color: #939699">
@@ -780,7 +779,6 @@
     <!-- /.modal -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
-    <script src="js/jquery.mask.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/article.js"></script>
 </body>
