--- a/article-another.html
+++ b/article-another.html
@@ -14,6 +14,14 @@
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
+    <style>
+        .hero{
+            background: linear-gradient(0deg, rgba(38, 45, 51, 0.75), rgba(38, 45, 51, 0.75)), url('../img/article-hero-another.png');
+            background-size: cover;
+            background-position: top center;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 <body>
     <header class="header">
@@ -108,11 +116,11 @@
                         <img src="img/home.svg" alt="Icon: home" class="mains__icon">
                         На главную
                     </a>
-                    <a href="article-another.html" class="mains__link">
+                    <a href="article.html" class="mains__link">
                         <img src="img/back.svg" alt="Icon: back" class="mains__icon">
                         Назад
                     </a>
-                    <a href="article-another.html" class="mains__link">
+                    <a href="article.html" class="mains__link">
                         Вперед
                         <img src="img/forward.svg" alt="Icon: forward" class="mains__icon mains__icon-last">
                     </a>
