images are now resized

--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
             <div class="footer__devider-another"></div>
             <div class="footer__wrapper">
                 <div class="footer__links">
-                    <a href="#" class="footer__item-another">
+                    <a href="index.html" class="footer__item-another">
                         <img src="img/footer-logo.svg" alt="Icon: logo footer" class="footer__logo">
                     </a>
                     <a href="#" class="footer__item">Контакты</a>
