--- a/article-another.html
+++ b/article-another.html
@@ -787,9 +787,9 @@
         <!-- /.modal__dialog -->
     </div>
     <!-- /.modal -->
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="js/article.js"></script>
+    <script defer src="js/jquery-3.5.1.min.js"></script>
+    <script defer src="js/jquery.validate.min.js"></script>
+    <script defer src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script defer src="js/article.js"></script>
 </body>
 </html>
