--- a/index.html
+++ b/index.html
@@ -4,15 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Издательство Universal</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">  
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">   -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
+
+
+    <style>
+        /* This is Lato font */
+
+        /* latin */
+        @font-face {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/lato/v17/S6uyw4BMUTPHjx4wXg.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        }
+        /* latin */
+        @font-face {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 700;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh6UVSwiPGQ.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        }
+        /* latin */
+        @font-face {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 900;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh50XSwiPGQ.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        }
+
+        /* This is Roboto Slab font */
+        /* cyrillic */
+        @font-face {
+        font-family: 'Roboto Slab';
+        font-style: normal;
+        font-weight: 700;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/robotoslab/v12/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjoa4Oma2RjRdE.woff2) format('woff2');
+        unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+        }
+        /* latin */
+        @font-face {
+        font-family: 'Roboto Slab';
+        font-style: normal;
+        font-weight: 700;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/robotoslab/v12/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjoa4Omb2Rj.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        }
+    </style>
 </head>
 <body>
     <header class="header">
@@ -253,12 +306,12 @@
                                 Как поступить, если хочется пойти на работу мечты, но она находится в другом городе. У вас семья и переезжать вы не готовы. 
                             </span>
                         </div>
-                        <img src="img/car.png" alt="Icon: car" class="others__first-img">
+                        <img data-src="img/car.png" alt="Icon: car" class="lazy others__first-img">
                     </div>
                     <!-- /.others__first-one -->
                     <div class="others__first-devide"></div>
                     <div class="others__first-comment">
-                        <img src="img/avatar-others.png" alt="Icon: avatar" class="others__first-avatar">
+                        <img data-src="img/avatar-others.png" alt="Icon: avatar" class="lazy others__first-avatar">
                         <div class="others__first-decr">
                             <span class="others__first-decr-first">Инна Квашова: </span>
                             <span class="others__first-decr-second">Каждый разработчик мечтает переехать в тут идет продолжение текста, так что можно написать все, что угодно</span>
@@ -416,7 +469,7 @@
             <!-- /.others__forth -->
             <a href="#" class="others__links grid-five">
                 <div class="others__fifth fifth">
-                    <img src="img/others-fifth.png" alt="Icon: article picture" class="fifth__img">
+                    <img data-src="img/others-fifth.png" alt="Icon: article picture" class="lazy fifth__img">
                     <div class="fifth__text">
                         20+ инструментов для js-разработчика
                     </div>
@@ -530,7 +583,7 @@
                     <svg class="news__book" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="news__book-color" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
                     </svg>
-                    <img src="img/post-one.png" alt="Icon: post image" class="news__post-img">
+                    <img data-src="img/post-one.png" alt="Icon: post image" class="lazy news__post-img">
                     <a href="#" class="news__link">
                         <div class="news__post-descr post">
                             <div class="post__type post__type-first">Новости</div>
@@ -565,7 +618,7 @@
                     <svg class="news__book" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="news__book-color" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
                     </svg>
-                    <img src="img/post-two.png" alt="Icon: post image" class="news__post-img">
+                    <img data-src="img/post-two.png" alt="Icon: post image" class="lazy news__post-img">
                     <a href="#" class="news__link">
                         <div class="news__post-descr post">
                             <div class="post__type post__type-second">Мнения</div>
@@ -598,7 +651,7 @@
                     <svg class="news__book" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="news__book-color" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
                     </svg>
-                    <img src="img/post-three.png" alt="Icon: post image" class="news__post-img">
+                    <img data-src="img/post-three.png" alt="Icon: post image" class="lazy news__post-img">
                     <a href="#" class="news__link">
                             <div class="news__post-descr post">
                                 <div class="post__type post__type-third">Горячее</div>
@@ -631,7 +684,7 @@
                     <svg class="news__book" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="news__book-color" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
                     </svg>
-                    <img src="img/post-four.png" alt="Icon: post image" class="news__post-img">
+                    <img data-src="img/post-four.png" alt="Icon: post image" class="lazy news__post-img">
                     <a href="#" class="news__link">
                             <div class="news__post-descr post">
                                 <div class="post__type post__type-forth">Мнения</div>
@@ -664,7 +717,7 @@
                     <svg class="news__book" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="news__book-color" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
                     </svg>
-                    <img src="img/post-five.png" alt="Icon: post image" class="news__post-img">
+                    <img data-src="img/post-five.png" alt="Icon: post image" class="lazy news__post-img">
                     <a href="#" class="news__link">
                             <div class="news__post-descr post">
                                 <div class="post__type post__type-fifth">Горячее</div>
@@ -698,7 +751,7 @@
                     <svg class="news__book" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="news__book-color" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
                     </svg>
-                    <img src="img/post-six.png" alt="Icon: post image" class="news__post-img">
+                    <img data-src="img/post-six.png" alt="Icon: post image" class="lazy news__post-img">
                     <a href="#" class="news__link">
                             <div class="news__post-descr post">
                                 <div class="post__type post__type-six">Подборки</div>
@@ -736,7 +789,7 @@
                 <div class="seconds__container">
                     <a href="#" class="seconds__post-link">
                         <div class="seconds__post">
-                            <img src="img/post-small-one.png" alt="Icon: post small" class="seconds__img">
+                            <img data-src="img/post-small-one.png" alt="Icon: post small" class="lazy seconds__img">
                             <div class="seconds__descr-block">
                                 <div class="seconds__descr">
                                     Работа на удаленке, как это теперь
@@ -750,7 +803,7 @@
                     <div class="seconds__devide"></div>
                     <a href="#" class="seconds__post-link">
                         <div class="seconds__post">
-                            <img src="img/post-small-two.png" alt="Icon: post small" class="seconds__img">
+                            <img data-src="img/post-small-two.png" alt="Icon: post small" class="lazy seconds__img">
                             <div class="seconds__descr-block">
                                 <div class="seconds__descr">
                                     Для чего нужен Node.js и с чем...
@@ -764,7 +817,7 @@
                     <div class="seconds__devide"></div>
                     <a href="#" class="seconds__post-link">
                         <div class="seconds__post">
-                            <img src="img/post-small-three.png" alt="Icon: post small" class="seconds__img">
+                            <img data-src="img/post-small-three.png" alt="Icon: post small" class="lazy seconds__img">
                             <div class="seconds__descr-block">
                                 <div class="seconds__descr">
                                     Работа в Google: собеседования и что-то еще
@@ -778,7 +831,7 @@
                     <div class="seconds__devide"></div>
                     <a href="#" class="seconds__post-link">
                         <div class="seconds__post">
-                            <img src="img/post-small-four.png" alt="Icon: post small" class="seconds__img">
+                            <img data-src="img/post-small-four.png" alt="Icon: post small" class="lazy seconds__img">
                             <div class="seconds__descr-block">
                                 <div class="seconds__descr">
                                     Переезд в Нью Йорк для работы по...
@@ -792,7 +845,7 @@
                     <div class="seconds__devide"></div>
                     <a href="#" class="seconds__post-link">
                         <div class="seconds__post">
-                            <img src="img/post-small-five.png" alt="Icon: post small" class="seconds__img">
+                            <img data-src="img/post-small-five.png" alt="Icon: post small" class="lazy seconds__img">
                             <div class="seconds__descr-block">
                                 <div class="seconds__descr">
                                     Почему родители против того, чтобы что-то еще тут
@@ -806,7 +859,7 @@
                     <div class="seconds__devide"></div>
                     <a href="#" class="seconds__post-link">
                         <div class="seconds__post">
-                            <img src="img/post-small-six.png" alt="Icon: post small" class="seconds__img">
+                            <img data-src="img/post-small-six.png" alt="Icon: post small" class="lazy seconds__img">
                             <div class="seconds__descr-block">
                                 <div class="seconds__descr">
                                     Прокрастинация:  побороть отклады вать на потом
@@ -820,7 +873,7 @@
                     <div class="seconds__devide"></div>
                     <a href="#" class="seconds__post-link">
                         <div class="seconds__post">
-                            <img src="img/post-small-seven.png" alt="Icon: post small" class="seconds__img">
+                            <img data-src="img/post-small-seven.png" alt="Icon: post small" class="lazy seconds__img">
                             <div class="seconds__descr-block">
                                 <div class="seconds__descr">
                                     Правки от заказчика могут быть...
@@ -854,7 +907,7 @@
                         <!-- Slides -->
                         <div class="swiper-slide first-slide slide">
                             <span class="slide__cat">Горячее</span>
-                            <img src="img/slide-avatar.png" alt="Icon: avatar" class="slide__avatar">
+                            <img data-src="img/slide-avatar.png" alt="Icon: avatar" class="lazy slide__avatar">
                             <span class="slide__name">Оксана Пушкина</span>
                             <span class="slide__how">Фотограф</span>
                             <div class="slide__title">
@@ -868,7 +921,7 @@
                         </div>
                         <div class="swiper-slide second-slide slide">
                             <span class="slide__cat">Новости</span>
-                            <img src="img/one.jpg" alt="Icon: avatar" class="slide__avatar">
+                            <img data-src="img/one.jpg" alt="Icon: avatar" class="lazy slide__avatar">
                             <span class="slide__name">Анастасия Егорова</span>
                             <span class="slide__how">Блогер</span>
                             <div class="slide__title">
@@ -882,7 +935,7 @@
                         </div>
                         <div class="swiper-slide third-slide slide">
                             <span class="slide__cat">Горячее</span>
-                            <img src="img/two.jpg" alt="Icon: avatar" class="slide__avatar">
+                            <img data-src="img/two.jpg" alt="Icon: avatar" class="lazy slide__avatar">
                             <span class="slide__name">Мария Жукова</span>
                             <span class="slide__how">Студентка</span>
                             <div class="slide__title">
@@ -896,7 +949,7 @@
                         </div>
                         <div class="swiper-slide forth-slide slide">
                             <span class="slide__cat">Подборка</span>
-                            <img src="img/three.jpg" alt="Icon: avatar" class="slide__avatar">
+                            <img data-src="img/three.jpg" alt="Icon: avatar" class="lazy slide__avatar">
                             <span class="slide__name">Ирина Петрова</span>
                             <span class="slide__how">Активистка</span>
                             <div class="slide__title">
@@ -910,7 +963,7 @@
                         </div>
                         <div class="swiper-slide fifth-slide slide">
                             <span class="slide__cat">Новости</span>
-                            <img src="img/four.jpg" alt="Icon: avatar" class="slide__avatar">
+                            <img data-src="img/four.jpg" alt="Icon: avatar" class="lazy slide__avatar">
                             <span class="slide__name">Александра Икрамова</span>
                             <span class="slide__how">Путешественник</span>
                             <div class="slide__title">
@@ -1127,7 +1180,7 @@
     <!-- /.modal -->
     <script defer src="js/jquery-3.5.1.min.js"></script>
     <script defer src="js/jquery.validate.min.js"></script>
-    <script defer src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script defer src="js/swiper-bundle.min.js"></script>
     <script defer src="js/main.js"></script>
 </body>
 </html>
