--- a/article-another.html
+++ b/article-another.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/atricle-style.css">
 
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
     <style>
         .hero{
@@ -836,7 +836,7 @@
     <!-- /.modal -->
     <script defer src="js/jquery-3.5.1.min.js"></script>
     <script defer src="js/jquery.validate.min.js"></script>
-    <script defer src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script defer src="js/swiper-bundle.min.js"></script>
     <script defer src="js/article.js"></script>
 </body>
 </html>
