--- a/article.html
+++ b/article.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/atricle-style.css">
 
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
 
     <style>
@@ -829,7 +829,7 @@
     <!-- /.modal -->
     <script defer src="js/jquery-3.5.1.min.js"></script>
     <script defer src="js/jquery.validate.min.js"></script>
-    <script defer src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script defer src="js/swiper-bundle.min.js"></script>
     <script defer src="js/article.js"></script>
 </body>
 </html>
