--- a/thankyou.html
+++ b/thankyou.html
@@ -344,7 +344,7 @@
     <!-- /.modal -->
     <script defer src="js/jquery-3.5.1.min.js"></script>
     <script defer src="js/jquery.validate.min.js"></script>
-    <script defer src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script defer src="js/swiper-bundle.min.js"></script>
     <script defer src="js/article.js"></script>
 </body>
 </html>
