--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
     <link rel="preload" href="css/normalize.min.css" as="style" onload="this.rel='stylesheet'">
     <link rel="preload" href="css/swiper-bundle.min.css" as="style" onload="this.rel='stylesheet'">
-    <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
 
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="css/swiper-bundle.min.css"> -->
     <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
 
