--- a/article.html
+++ b/article.html
@@ -4,47 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Издательство Universal</title>
-    <!-- <link rel="stylesheet" href="css/normalize.min.css"> -->
 
-    <link rel="preload" href="css/normalize.min.css" as="style" onload="this.rel='stylesheet'">
-    <link rel="preload" href="css/swiper-bundle.min.css" as="style" onload="this.rel='stylesheet'">
-
+    <link rel="preload" href="fonts/Lato/Lato-Black.ttf" as="font" crossorigin="anonymous" />
+    <link rel="preload" href="fonts/Lato/Lato-Bold.ttf" as="font" crossorigin="anonymous" />
+    <link rel="preload" href="fonts/Lato/Lato-Regular.ttf" as="font" crossorigin="anonymous" />
+    <!-- <link rel="preload" href="fonts/Lato/Lato-Light.ttf" as="font" crossorigin="anonymous" /> -->
+    
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/atricle-style.css">
 
-    <!-- <link rel="stylesheet" href="css/swiper-bundle.min.css"> -->
+    <link rel="stylesheet" href="css/normalize.min.css">
+
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
 
     <style>
-        /* This is Lato font */
-
-        /* latin */
-        @font-face {
-        font-family: 'Lato';
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url(https://fonts.gstatic.com/s/lato/v17/S6uyw4BMUTPHjx4wXg.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-        }
-        /* latin */
-        @font-face {
-        font-family: 'Lato';
-        font-style: normal;
-        font-weight: 700;
-        font-display: swap;
-        src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh6UVSwiPGQ.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-        }
-        /* latin */
-        @font-face {
-        font-family: 'Lato';
-        font-style: normal;
-        font-weight: 900;
-        font-display: swap;
-        src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh50XSwiPGQ.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-        }
+       
 
         /* This is Roboto Slab font */
         /* cyrillic */
